--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .indent-1 {
+    text-indent: 0.25rem;
+  }
+  .indent-2 {
+    text-indent: 0.5rem;
+  }
+  .indent-3 {
+    text-indent: 0.75rem;
+  }
+  .indent-4 {
+    text-indent: 1rem;
+  }
+}
